samples/_failures_safe/1761369308_375a8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bcee8dd.c: In function ‘main’:
./samples/SAFE/__tmp_0bcee8dd.c:159:21: error: expected ‘;’ at end of input
  159 |             return 1
      |                     ^
      |                     ;
./samples/SAFE/__tmp_0bcee8dd.c:159:13: error: expected declaration or statement at end of input
  159 |             return 1
      |             ^~~~~~
./samples/SAFE/__tmp_0bcee8dd.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0bcee8dd.c:159:13: error: expected declaration or statement at end of input
